@@ -18,12 +18,12 @@ void _wapi_calc_timeout(struct timespec *timeout, guint32 ms)
 {
 	struct timeval now;
 	div_t divvy;
-		
+
 	gettimeofday(&now, NULL);
-	divvy=div(now.tv_usec+1000*ms, 1000000);
+	divvy=div((now.tv_usec/1000)+ms, 1000);
 		
 	timeout->tv_sec=now.tv_sec+divvy.quot;
-	timeout->tv_nsec=divvy.rem*1000;
+	timeout->tv_nsec=divvy.rem*1000000;
 }
 
 /* This is used instead of g_renew when we need to keep unused
